fix: hide sidebar on small screens

--- a/static/client/components/Views/FullSiteView/_FullSiteView.scss
+++ b/static/client/components/Views/FullSiteView/_FullSiteView.scss
@@ -29,9 +29,7 @@
   }
 
   @media (max-width: $breakpoint-small) {
-    max-height: fit-content;
-    width: 100%;
-    position: relative;
+    display: none;
   }
 }
 
